<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.HomeFragment">

    <RelativeLayout
        android:id="@+id/rlInfo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#81123456"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tvNameHome"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:padding="5dp"
            android:textColor="@color/black"
            android:textSize="15sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tvPhoneHome"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:padding="5dp"
            android:textColor="@color/black"
            android:textSize="15sp"
            android:textStyle="bold" />
    </RelativeLayout>

    <GridLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:columnCount="2"
        android:rowCount="4">

        <Button
            android:id="@+id/btnWeatherHome"
            android:layout_width="175dp"
            android:layout_height="100dp"
            android:layout_alignParentStart="true"
            android:layout_marginRight="5dp"
            android:drawableTop="@drawable/ic_cloud"
            android:drawableTint="@color/white"
            android:padding="10dp"
            android:text="@string/weather"
            android:textAllCaps="false" />

        <Button
            android:id="@+id/btnDealerHome"
            android:layout_width="175dp"
            android:layout_height="100dp"
            android:layout_alignParentEnd="true"
            android:layout_marginLeft="5dp"
            android:drawableTop="@drawable/ic_dealers"
            android:drawableTint="@color/white"
            android:padding="10dp"
            android:text="@string/dealers"
            android:textAllCaps="false" />

        <Button
            android:id="@+id/btnMarketPriceHome"
            android:layout_width="175dp"
            android:layout_height="100dp"
            android:layout_below="@+id/btnWeatherHome"
            android:layout_alignParentStart="true"
            android:layout_marginRight="5dp"
            android:drawableTop="@drawable/ic_market_price"
            android:drawableTint="@color/white"
            android:padding="10dp"
            android:text="@string/market_price"
            android:textAllCaps="false" />

        <Button
            android:id="@+id/btnPlantProtectionHome"
            android:layout_width="175dp"
            android:layout_height="100dp"
            android:layout_below="@+id/btnWeatherHome"
            android:layout_alignParentEnd="true"
            android:layout_marginLeft="5dp"
            android:drawableTop="@drawable/ic_plant_protection"
            android:drawableTint="@color/white"
            android:padding="10dp"
            android:text="@string/plant_protection"
            android:textAllCaps="false" />

        <Button
            android:id="@+id/btnAgroAdvisoryHome"
            android:layout_width="175dp"
            android:layout_height="100dp"
            android:layout_below="@+id/btnMarketPriceHome"
            android:layout_alignParentStart="true"
            android:layout_marginRight="5dp"
            android:drawableTop="@drawable/ic_agro_advisory"
            android:drawableTint="@color/white"
            android:padding="10dp"
            android:text="@string/agro_advisory"
            android:textAllCaps="false" />

        <Button
            android:id="@+id/btnCallKCCHome"
            android:layout_width="175dp"
            android:layout_height="100dp"
            android:layout_below="@+id/btnMarketPriceHome"
            android:layout_alignParentEnd="true"
            android:layout_marginLeft="5dp"
            android:drawableTop="@drawable/ic_call_kcc"
            android:drawableTint="@color/white"
            android:padding="10dp"
            android:text="@string/call_to_kcc"
            android:textAllCaps="false" />

        <Button
            android:id="@+id/btnSoilHealthHome"
            android:layout_width="175dp"
            android:layout_height="100dp"
            android:layout_below="@+id/btnAgroAdvisoryHome"
            android:layout_alignParentStart="true"
            android:layout_marginRight="5dp"
            android:drawableTop="@drawable/ic_soil_health_card"
            android:drawableTint="@color/white"
            android:padding="10dp"
            android:text="@string/soil_health_card"
            android:textAllCaps="false" />

        <Button
            android:id="@+id/btnColdStorageHome"
            android:layout_width="175dp"
            android:layout_height="100dp"
            android:layout_below="@+id/btnAgroAdvisoryHome"
            android:layout_alignParentEnd="true"
            android:layout_marginLeft="5dp"
            android:drawableTop="@drawable/ic_cold_store"
            android:drawableTint="@color/white"
            android:padding="10dp"
            android:text="@string/coldstore_godown"
            android:textAllCaps="false" />
    </GridLayout>

    <Button
        android:id="@+id/btnLogout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:text="Logout"
        android:textAllCaps="false"
        android:textSize="20sp" />
</RelativeLayout>