<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/tvCallKCC"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:text="Dealer's Info"
        android:textSize="20sp"
        android:textStyle="bold" />


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:text="Happy to help!"
        android:layout_centerHorizontal="true"
        android:layout_above="@+id/cvInfo"
        android:layout_marginBottom="30dp"
        android:textSize="20dp"
        android:textStyle="bold"
        android:textColor="@color/purple_500"
        />

    <androidx.cardview.widget.CardView
        android:id="@+id/cvInfo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        app:cardCornerRadius="10dp">

        <GridLayout
            android:id="@+id/kcc_grid"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/purple_500"
            android:columnCount="1"
            android:padding="10dp"
            android:rowCount="3">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/box_bg"
                android:orientation="horizontal"
                android:padding="5dp">

                <TextView
                    android:id="@+id/tvOne"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@color/purple_500"
                    android:orientation="vertical"
                    android:padding="5dp"
                    android:text="Customer Service No-1:"
                    android:textColor="@color/white" />

                <TextView
                    android:id="@+id/edOne"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:layout_marginLeft="20dp"
                    android:background="@color/purple_500"
                    android:orientation="vertical"
                    android:padding="5dp"
                    android:text="@string/u_8849773158_u"
                    android:textColor="@color/white"
                    android:textIsSelectable="true" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:background="@drawable/box_bg"
                android:orientation="horizontal"
                android:padding="5dp">

                <TextView
                    android:id="@+id/tvTwo"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:background="@color/purple_500"
                    android:orientation="vertical"
                    android:padding="5dp"
                    android:text="Customer Service No-1:"
                    android:textColor="@color/white" />

                <TextView
                    android:id="@+id/edTwo"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:layout_marginLeft="20dp"
                    android:layout_marginTop="10dp"
                    android:background="@color/purple_500"
                    android:orientation="vertical"
                    android:padding="5dp"
                    android:text="@string/_1800_420_230"
                    android:textColor="@color/white"
                    android:textIsSelectable="true" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:background="@drawable/box_bg"
                android:orientation="horizontal"
                android:padding="5dp">

                <TextView
                    android:id="@+id/tvThree"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:background="@color/purple_500"
                    android:orientation="vertical"
                    android:padding="5dp"
                    android:text="Customer Service No-1:"
                    android:textColor="@color/white" />

                <TextView
                    android:id="@+id/edThree"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:layout_marginLeft="20dp"
                    android:layout_marginTop="10dp"
                    android:background="@color/purple_500"
                    android:orientation="vertical"
                    android:padding="5dp"
                    android:text="@string/_1800_260_327"
                    android:textColor="@color/white"
                    android:textIsSelectable="true" />
            </LinearLayout>
        </GridLayout>
    </androidx.cardview.widget.CardView>

</RelativeLayout>